kubernetes/media/prowlarr/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: prowlarr
  namespace: media
spec:
  serviceName: "prowlarr"
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      securityContext:
        fsGroup: 1000
      automountServiceAccountToken: false
      containers:
        - name: prowlarr
          image: lscr.io/linuxserver/prowlarr:1.33.3
          resources:
            requests:
              cpu: 1000m
              memory: 500Mi
              ephemeral-storage: 32Gi
            limits:
              cpu: 2000m
              memory: 4Gi
              ephemeral-storage: 32Gi
          ports:
            - name: prowlarr-http
              containerPort: 9696
              protocol: TCP
          volumeMounts:
            - name: prowlarr-data
              mountPath: /config
            - name: homelab-nfs
              mountPath: /mnt/media
      volumes:
        - name: homelab-nfs
          nfs:
            server: 192.168.1.70
            path: /volume1/library
  volumeClaimTemplates:
    - metadata:
        name: prowlarr-data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "longhorn"
        resources:
          requests:
            storage: 32Gi
